@@ -173,3 +173,4 @@ T_324propedit_chapters:785209f2dc35ad6177bea2ca6e43198f-f240df9a576de2cc683e1f4e
 T_325propedit_tags:785209f2dc35ad6177bea2ca6e43198f-3f151ff52e43ed1df3c173e5b0c78ee2-e58a5937ac6e0dc71d6c8264c53535be-cde42f3a1204403bd9f825f6c408521e-e58a5937ac6e0dc71d6c8264c53535be-cde42f3a1204403bd9f825f6c408521e-e26ce3a9725c74e16b5be99a5a917ae2-1a6b0e586328c306d63e9d829c85dcbe-8aa2fda41ba5c0cfe6fec3d46611896c-15c4f84c3afd7b158c0c1cd372f898d9-8aa2fda41ba5c0cfe6fec3d46611896c-15c4f84c3afd7b158c0c1cd372f898d9-53f569add0f778e2813ba1f7e7e5a2b6-1e1f38bd64d26e8a38e45c39b8ef2f5b-54597c44d0938662d716edd21e4d6c68-d41d8cd98f00b204e9800998ecf8427e:passed:20111203-160727:1.442408716
 T_326mpeg_ps_mpeg_audio_layer4:ff06a9bda2235c9c834ef839344325af:passed:20111207-224511:2.60761265
 T_327vp8_frame_type:69725de2b6569734a3b1f955b4775e74:passed:20111207-233304:0.214913089
+T_328dts_detected_as_ac3:dfac59530d2d96ab9f41465fdc3931fd:passed:20111229-192324:0.053131334
